--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -23,7 +23,8 @@
             margin-bottom: 20px;
         }
         video {
-          max-width: 300px;
+            max-width: 40%;
+    	    height: auto;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
@@ -332,6 +333,7 @@
                         }
                     });
                 }
+            await getLocalStream();
             }
         });
 
