--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -24,7 +24,7 @@
         }
         video {
             max-width: 40%;
-    	    height: auto;
+    	    height: 80%;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
@@ -333,7 +333,6 @@
                         }
                     });
                 }
-            await getLocalStream();
             }
         });
 
