--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -24,7 +24,6 @@
         }
         video {
             max-width: 40%;
-            height: auto;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
@@ -55,12 +54,11 @@
     <div id="video-container">
         <div class="video-wrapper" id="local-wrapper">
             <video id="localVideo" autoplay playsinline muted></video>
-            <div class="controls">
+            <div class="controls">     
                 <button class="unlike-button" style="display: none;">⚡</button>
                 <p class="unlikes-count" style="display: none;">Unlikes reçus: 0</p>
             </div>
         </div>
-        <div id="remote-videos"></div>
     </div>
     <div id="main-controls">
         <label>
@@ -84,15 +82,13 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
-        <button id="likeButton">❤️</button>
-        <p id="likesCount">Likes reçus: 0</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
     <script>
         let localStream;
         let peer;
-        let currentCall;
+        let call;
         let likedUsers = {};
         let unlikedUsers = {};
         let lastCallerId = '';
@@ -107,9 +103,7 @@
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
-        const likeButton = document.getElementById('likeButton');
-        const likesCount = document.getElementById('likesCount');
-        const remoteVideosContainer = document.getElementById('remote-videos');
+        const videoContainer = document.getElementById('video-container');
 
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
@@ -159,22 +153,15 @@
                         } else {
                             likedUsers[senderId]++;
                         }
-                        updateLikesCount();
+                        updateLikesCount(senderId);
                     } else if (data.type === 'unlike') {
                         const senderId = conn.peer;
-                        localStorage.setItem('excludedUser', senderId);
-                        setTimeout(() => {
-                            if (localStorage.getItem('excludedUser') === senderId) {
-                                document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-                                throw new Error("L'utilisateur est exclu");
-                            }
-                        }, 5000);
                         if (!unlikedUsers[senderId]) {
                             unlikedUsers[senderId] = 1;
                         } else {
                             unlikedUsers[senderId]++;
                         }
-                        updateUnlikesCount();
+                        updateUnlikesCount(senderId);
                     }
                 });
             });
@@ -185,7 +172,7 @@
         }
 
         async function getLocalStream() {
-            const constraints = await detectCameraConstraints();
+            const constraints = await updateCameraSelect();
             return navigator.mediaDevices.getUserMedia(constraints)
                 .then(stream => {
                     localStream = stream;
@@ -199,110 +186,108 @@
                 });
         }
 
-        async function detectCameraConstraints() {
-            const devices = await navigator.mediaDevices.enumerateDevices();
-            const videoDevices = devices.filter(device => device.kind === 'videoinput');
-            const isIPhone = /iPhone/.test(navigator.userAgent);
-
-            // Clear previous options
-            cameraSelect.innerHTML = '';
-
-            if (videoDevices.length > 0) {
-                cameraSelect.innerHTML = videoDevices.map((device, index) => 
-                    `<option value="${device.deviceId}">Caméra ${index + 1}</option>`
-                ).join('');
-            }
-
-            // Set default camera
-            const storedCameraId = localStorage.getItem('selectedCameraId');
-            if (storedCameraId && videoDevices.some(dev => dev.deviceId === storedCameraId)) {
-                cameraSelect.value = storedCameraId;
-            } else if (videoDevices.length > 0) {
-                cameraSelect.value = videoDevices[0].deviceId;
-            }
-
-            // iPhone specific camera handling
-            if (isIPhone) {
-                return {
-                    audio: true,
-                    video: { deviceId: { exact: cameraSelect.value } }
-                };
-            }
-
-            // Default camera handling
-            return {
+        async function updateCameraSelect() {
+            const device = detectDevice();
+            let constraints = {
                 audio: true,
                 video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
             };
-        }
 
-        function addRemoteVideo(peerId, stream) {
-            // Remove existing remote video if it already exists
-            const existingWrapper = document.getElementById(`remote-${peerId}`);
-            if (existingWrapper) {
-                existingWrapper.remove();
+            const devices = await navigator.mediaDevices.enumerateDevices();
+            const videoDevices = devices.filter(device => device.kind === 'videoinput');
+            cameraSelect.innerHTML = '';
+
+            if (device === 'iOS') {
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else if (device === 'Android') {
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else {
+                videoDevices.forEach((device, index) => {
+                    const option = document.createElement('option');
+                    option.value = device.deviceId;
+                    option.text = `Caméra ${index + 1}`;
+                    cameraSelect.appendChild(option);
+                });
             }
 
-            const videoWrapper = document.createElement('div');
-            videoWrapper.classList.add('video-wrapper');
-            videoWrapper.id = `remote-${peerId}`;
+            // Restore the previously selected camera
+            const savedCameraId = localStorage.getItem('selectedCameraId');
+            if (savedCameraId) {
+                cameraSelect.value = savedCameraId;
+            }
 
-            const videoElement = document.createElement('video');
-            videoElement.autoplay = true;
-            videoElement.playsInline = true;
-            videoElement.srcObject = stream;
+            return constraints;
+        }
 
-            const controls = document.createElement('div');
-            controls.classList.add('controls');
-            const unlikeButton = document.createElement('button');
-            unlikeButton.classList.add('unlike-button');
-            unlikeButton.innerHTML = '⚡';
-            unlikeButton.style.display = 'none';
-            unlikeButton.addEventListener('click', () => {
-                peer.connections[peerId][0].send({ type: 'unlike' });
-                unlikedUsers[peerId] = (unlikedUsers[peerId] || 0) + 1;
-                updateUnlikesCount();
-                setTimeout(() => {
-                    document.getElementById(`remote-${peerId}`).remove();
-                }, 5000);
-            });
-
-            const unlikeCount = document.createElement('p');
-            unlikeCount.classList.add('unlikes-count');
-            unlikeCount.style.display = 'none';
-            unlikeCount.textContent = 'Unlikes reçus: 0';
-
-            controls.appendChild(unlikeButton);
-            controls.appendChild(unlikeCount);
-
-            videoWrapper.appendChild(videoElement);
-            videoWrapper.appendChild(controls);
-            remoteVideosContainer.appendChild(videoWrapper);
-
-            peerConnections[peerId] = new RTCPeerConnection();
-            peerConnections[peerId].addStream(stream);
+        function detectDevice() {
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            if (/windows phone/i.test(userAgent)) {
+                return "Windows Phone";
+            }
+            if (/android/i.test(userAgent)) {
+                return "Android";
+            }
+            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                return "iOS";
+            }
+            return "unknown";
         }
 
         function applyMicMute() {
-            const audioTracks = localStream.getAudioTracks();
-            if (audioTracks.length > 0) {
-                audioTracks[0].enabled = !muteCheckbox.checked;
+            if (localStream) {
+                const audioTracks = localStream.getAudioTracks();
+                if (audioTracks.length > 0) {
+                    audioTracks[0].enabled = !muteCheckbox.checked;
+                }
+            }
+        }
+
+        function sendMuteSignal(mute) {
+            if (call) {
+                call.peerConnection.getSenders().forEach(sender => {
+                    if (sender.track && sender.track.kind === 'audio') {
+                        sender.track.enabled = !mute;
+                    }
+                });
             }
         }
 
         callButton.addEventListener('click', () => {
-            const peerId = peerIdInput.value;
-            if (!peerId) return;
+            const peerId = peerIdInput.value.trim();
+            if (!peerId) {
+                alert('Veuillez entrer l\'ID de la personne à appeler.');
+                return;
+            }
 
             getLocalStream()
                 .then((stream) => {
                     localStream = stream;
-                    localVideo.srcObject = stream;
-                    const call = peer.call(peerId, stream);
+                    call = peer.call(peerId, stream);
+
                     call.on('stream', (remoteStream) => {
                         addRemoteVideo(peerId, remoteStream);
                     });
+
+                    call.on('close', () => {
+                        removeRemoteVideo(peerId);
+                    });
+
                     lastCallerId = peerId;
+                    localStorage.setItem('lastCallerId', peerId);
                 })
                 .catch((err) => {
                     console.error('Failed to get local stream', err);
@@ -310,53 +295,131 @@
         });
 
         hangupButton.addEventListener('click', () => {
-            if (currentCall) {
-                currentCall.close();
-            }
-            document.getElementById('video-container').innerHTML = '';
-        });
-
-        muteCheckbox.addEventListener('change', applyMicMute);
-        muteRemoteCheckbox.addEventListener('change', () => {
-            const audioTracks = remoteVideosContainer.querySelector('video')?.srcObject?.getAudioTracks();
-            if (audioTracks) {
-                audioTracks.forEach(track => track.enabled = !muteRemoteCheckbox.checked);
+            if (call) {
+                call.close();
+                call = null;
             }
         });
 
-        cameraSelect.addEventListener('change', () => {
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
-            getLocalStream();
-        });
+        function addRemoteVideo(id, stream) {
+            let existingVideo = document.getElementById(`video-${id}`);
+            if (existingVideo) {
+                existingVideo.srcObject = stream;
+                return;
+            }
 
-        likeButton.addEventListener('click', () => {
-            const conn = peer.connections[lastCallerId]?.[0];
-            if (conn) {
+            const video = document.createElement('video');
+            video.id = `video-${id}`;
+            video.srcObject = stream;
+            video.autoplay = true;
+            video.playsinline = true;
+
+            const videoWrapper = document.createElement('div');
+            videoWrapper.className = 'video-wrapper';
+            videoWrapper.appendChild(video);
+
+            const controls = document.createElement('div');
+            controls.className = 'controls';
+            
+            const likeButton = document.createElement('button');
+            likeButton.textContent = '❤️';
+            likeButton.addEventListener('click', () => {
+                sendLike(id);
+            });
+            controls.appendChild(likeButton);
+            
+            const unlikeButton = document.createElement('button');
+            unlikeButton.textContent = '⚡';
+            unlikeButton.style.display = 'none';
+            unlikeButton.addEventListener('click', () => {
+                sendUnlike(id);
+            });
+            controls.appendChild(unlikeButton);
+
+            const likesCount = document.createElement('p');
+            likesCount.className = 'likes-count';
+            likesCount.style.display = 'none';
+            controls.appendChild(likesCount);
+
+            const unlikesCount = document.createElement('p');
+            unlikesCount.className = 'unlikes-count';
+            unlikesCount.style.display = 'none';
+            controls.appendChild(unlikesCount);
+
+            videoWrapper.appendChild(controls);
+            videoContainer.appendChild(videoWrapper);
+
+            peerConnections[id] = { video, likeButton, unlikeButton, likesCount, unlikesCount };
+        }
+
+        function removeRemoteVideo(id) {
+            const videoWrapper = document.querySelector(`#video-${id}`);
+            if (videoWrapper) {
+                videoWrapper.remove();
+                delete peerConnections[id];
+            }
+        }
+
+        function sendLike(id) {
+            const conn = peer.connect(id);
+            conn.on('open', () => {
                 conn.send({ type: 'like' });
-                if (!likedUsers[lastCallerId]) {
-                    likedUsers[lastCallerId] = 1;
-                } else {
-                    likedUsers[lastCallerId]++;
-                }
-                updateLikesCount();
+            });
+        }
+
+        function sendUnlike(id) {
+            const conn = peer.connect(id);
+            conn.on('open', () => {
+                conn.send({ type: 'unlike' });
+            });
+        }
+
+        function updateLikesCount(id) {
+            const player = peerConnections[id];
+            if (player) {
+                player.likesCount.textContent = `Likes reçus: ${likedUsers[id] || 0}`;
+                player.likesCount.style.display = 'block';
+            }
+        }
+
+        function updateUnlikesCount(id) {
+            const player = peerConnections[id];
+            if (player) {
+                player.unlikesCount.textContent = `Unlikes reçus: ${unlikedUsers[id] || 0}`;
+                player.unlikesCount.style.display = 'block';
+            }
+        }
+
+        muteCheckbox.addEventListener('change', () => {
+            applyMicMute();
+        });
+
+        muteRemoteCheckbox.addEventListener('change', () => {
+            sendMuteSignal(muteRemoteCheckbox.checked);
+        });
+
+        cameraSelect.addEventListener('change', async () => {
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
+            await getLocalStream();
+        });
+
+        // Initial camera setup
+        updateCameraSelect().then(() => {
+            const savedCameraId = localStorage.getItem('selectedCameraId');
+            if (savedCameraId) {
+                cameraSelect.value = savedCameraId;
+                getLocalStream();
             }
         });
 
-        function updateLikesCount() {
-            let totalLikes = 0;
-            for (const key in likedUsers) {
-                totalLikes += likedUsers[key];
+        // Automatically handle new calls
+        setInterval(() => {
+            const lastCallerId = localStorage.getItem('lastCallerId');
+            if (lastCallerId) {
+                peerIdInput.value = lastCallerId;
             }
-            likesCount.textContent = `Likes reçus: ${totalLikes}`;
-        }
+        }, 5000);
 
-        function updateUnlikesCount() {
-            let totalUnlikes = 0;
-            for (const key in unlikedUsers) {
-                totalUnlikes += unlikedUsers[key];
-            }
-            unlikedUsersCount.textContent = `Unlikes reçus: ${totalUnlikes}`;
-        }
     </script>
 </body>
 </html>
